build/log/idf_py_stderr_output_854043
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: In function 'adc_dma_init':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:67:28: error: 'ESP_TIMER_TIMER' undeclared (first use in this function); did you mean 'ESP_TIMER_ISR'?
   67 |         .dispatch_method = ESP_TIMER_TIMER,
      |                            ^~~~~~~~~~~~~~~
      |                            ESP_TIMER_ISR
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:67:28: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:167: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/interr_event.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
